--- a/portfolio.html
+++ b/portfolio.html
@@ -16,24 +16,30 @@
         <header class="header">
             <div class="conteiner header-div">
                 <nav class="nav">
-                    <a class="nav-link" href="./index.html" target="_self">Web<span class="header-studio">Studio</span></a>
-                    <ul class="nav-list">
-                        <li class="nav-list-item"><a href="./index.html" target="_self" class="nav-list-link">Студія</a></li>
-                        <li class="nav-list-item"><a href="./portfolio.html" target="_self" class="nav-list-link pf active-link">Портфоліо</a></li>
-                        <li class="nav-list-item"><a href="./" target="_self" class="nav-list-link">Контакти</a></li>
+                    <a class="link-header" href="./index.html" target="_self">Web<span class="logo">Studio</span></a>
+                    <ul class="list-header">
+                        <li class="list__item--header">
+                            <a href="./index.html" target="_self" class="link--list-item-header active">Студія</a>
+                        </li>
+                        <li class="list__item--header">
+                            <a href="./portfolio.html" target="_self"class="link--list-item-header">Портфоліо</a>
+                        </li>
+                        <li class="list__item--header">
+                            <a href="./" target="_self" class="link--list-item-header">Контакти</a>
+                        </li>
                     </ul>
                 </nav>
-                <ul class="header-list">
-                    <li class="list-item">
-                        <a href="mailto:info@devstudio.com" class="list-link">
+                <ul class="list-header">
+                    <li class="list__item-header">
+                        <a href="mailto:info@devstudio.com" class="link--list-item">
                             <svg width="16px" height="12px">
                                 <use href="./images/symboldefs.svg#gmail"></use>
                             </svg>
                             info@devstudio.com
                         </a>
                     </li>
-                    <li class="list-item">
-                        <a href="tel:+380961111111" class="list-link">
+                    <li class="list__item-header">
+                        <a href="tel:+380961111111" class="link--list-item">
                             <svg width="10px" height="16px">
                                 <use href="./images/symboldefs.svg#phone"></use>
                             </svg>
@@ -151,54 +157,54 @@
         </main>
         <footer class="footer">
             <div class="conteiner footer-div">
-                <div class="address-div">
-                    <a class="footer-link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-                    <address class="adress">
-                        <ul class="footer-adress-list">
-                            <li class="adress-list-item">
-                                <a class="adress-list-item-link-maps"
+                <div class="div-address">
+                    <a class="link-footer" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                    <address class="footer__adress">
+                        <ul class="list-footer">
+                            <li class="list-footer__item">
+                                <a class="link-address-maps"
                                     href="https://www.google.com/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4643905,30.4201671,12.3z?entry=ttu"
                                     target="_blank">м. Київ, пр-т Лесі Українки, 26
                                 </a>
                             </li>
-                            <li class="adress-list-item">
-                                <a class="adress-list-item-link" href="mailto:info@devstudio.com">
+                            <li class="list-footer__item">
+                                <a class="link-address" href="mailto:info@devstudio.com">
                                     info@devstudio.com
                                 </a>
                             </li>
-                            <li class="adress-list-item">
-                                <a class="adress-list-item-link" href="tel:+380961111111">
+                            <li class="list-footer">
+                                <a class="link-address" href="tel:+380961111111">
                                     +38 096 111 11 11
                                 </a>
                             </li>
                         </ul>
                     </address>
                 </div>
-                <div class="social-footer">
-                    <h3 class="footer-title">ПРИЄДНАТИСЯ</h3>
+                <div class="footer-social">
+                    <h3 class="title-footer-social">ПРИЄДНАТИСЯ</h3>
                     <ul class="social-list">
-                        <li class="social-item circle">
+                        <li class="social-list__item circle">
                             <a class="social-link fill" href="https://www.instagram.com/mixail.ermakov/">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-item circle">
+                        <li class="social-list__item circle">
                             <a class="social-link fill" href="https://twitter.com/misha115e">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-item circle">
+                        <li class="social-list__item circle">
                             <a class="social-link fill" href="https://www.facebook.com/michael.ermakov.18">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-item circle">
+                        <li class="social-list__item circle">
                             <a class="social-link fill"
                                 href="https://www.linkedin.com/in/%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB-%D0%B5%D1%80%D0%BC%D0%B0%D0%BA%D0%BE%D0%B2-2422a5281/">
                                 <svg width="20px" height="20px">
@@ -209,11 +215,11 @@
                     </ul>
                 </div>
                 <div class="div-send">
-                    <h3 class="send-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+                    <h3 class="title-footer-send">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
                     <div class="form">
                         <form class="form-footer">
-                            <input class="send-input" type="text" placeholder="E-mail" required>
-                            <button class="send-button" type="submit">
+                            <input class="input-send" type="email" placeholder="E-mail" required>
+                            <button class="button-send" type="submit">
                                 Підписатися
                                 <svg width="24px" height="24px">
                                     <use href="./images/symboldefs.svg#icon-send"></use>
