--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta 
+        name="viewport"
+        content="width=device-width,
+        initial-scale=1.0"
+    >
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,20 +22,20 @@
                 <nav class="nav">
                     <a class="link-header" href="./index.html" target="_self">Web<span class="logo">Studio</span></a>
                     <ul class="list-header">
-                        <li class="list__item--header">
-                            <a href="./index.html" target="_self" class="link--list-item-header active">Студія</a>
+                        <li class="list__item-header">
+                            <a href="./index.html" target="_self" class="link-list-item-header active">Студія</a>
                         </li>
-                        <li class="list__item--header">
-                            <a href="./portfolio.html" target="_self"class="link--list-item-header">Портфоліо</a>
+                        <li class="list__item-header">
+                            <a href="./portfolio.html" target="_self"class="link-list-item-header">Портфоліо</a>
                         </li>
-                        <li class="list__item--header">
-                            <a href="./" target="_self" class="link--list-item-header">Контакти</a>
+                        <li class="list__item-header">
+                            <a href="./" target="_self" class="link-list-item-header">Контакти</a>
                         </li>
                     </ul>
                 </nav>
                 <ul class="list-header">
                     <li class="list__item-header">
-                        <a href="mailto:info@devstudio.com" class="link--list-item">
+                        <a href="mailto:info@devstudio.com" class="link-list-item">
                             <svg width="16px" height="12px">
                                 <use href="./images/symboldefs.svg#gmail"></use>
                             </svg>
@@ -39,7 +43,7 @@
                         </a>
                     </li>
                     <li class="list__item-header">
-                        <a href="tel:+380961111111" class="link--list-item">
+                        <a href="tel:+380961111111" class="link-list-item">
                             <svg width="10px" height="16px">
                                 <use href="./images/symboldefs.svg#phone"></use>
                             </svg>
@@ -107,21 +111,21 @@
                     <h2 class="title-peculiarities">Особливості</h2>
                     <ul class="list-peculiarities">
                         <li class="list__item-peculiarities">
-                            <h3 class="title--item-peculiarities">УВАГА ДО ДЕТАЛЕЙ</h3>
+                            <h3 class="title-item-peculiarities">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="description">Ідейні міркування, і навіть початок повсякденної роботи з формування
                                 позиції.</p>
                         </li>
                         <li class="list__item-peculiarities">
-                            <h3 class="title--item-peculiarities">ПУНКТУАЛЬНІСТЬ</h3>
+                            <h3 class="title-item-peculiarities">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="description">Завдання організації, особливо рамки і місце навчання кадрів тягне у
                                 себе.</p>
                         </li>
                         <li class="list__item-peculiarities">
-                            <h3 class="title--item-peculiarities">ПЛАНУВАННЯ</h3>
+                            <h3 class="title-item-peculiarities">ПЛАНУВАННЯ</h3>
                             <p class="description">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
                         <li class="list__item-peculiarities">
-                            <h3 class="title--item-peculiarities">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                            <h3 class="title-item-peculiarities">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="description">Значимість цих проблем настільки очевидна, що реалізація планових
                                 завдань.</p>
                         </li>
