--- a/index.html
+++ b/index.html
@@ -382,30 +382,31 @@
                 <div class="footer-social">
                     <h3 class="title-footer-social">ПРИЄДНАТИСЯ</h3>
                     <ul class="social-list">
-                        <li class="social-list__item circle">
-                            <a class="social-link fill" href="https://www.instagram.com/mixail.ermakov/">
+                        <li class="social-list__item-footer">
+                            <a target="_blank" class="social-link" href="https://www.instagram.com/igordemyanenko/">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list__item circle">
-                            <a class="social-link fill" href="https://twitter.com/misha115e">
+                        <li class="social-list__item-footer">
+                            <a target="_blank" class="social-link" href="https://twitter.com/apollihwshel7p">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list__item circle">
-                            <a class="social-link fill" href="https://www.facebook.com/michael.ermakov.18">
+                        <li class="social-list__item-footer">
+                            <a target="_blank" class="social-link"
+                                href="https://www.facebook.com/profile.php?id=100091084160615">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list__item circle">
-                            <a class="social-link fill"
-                                href="https://www.linkedin.com/in/%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB-%D0%B5%D1%80%D0%BC%D0%B0%D0%BA%D0%BE%D0%B2-2422a5281/">
+                        <li class="social-list__item-footer">
+                            <a target="_blank" class="social-link"
+                                href="https://www.linkedin.com/in/%D0%B8%D0%B3%D0%BE%D1%80%D1%8C-%D0%B4%D0%B5%D0%BC%D1%8C%D1%8F%D0%BD%D0%B5%D0%BD%D0%BA%D0%BE-975bb546/">
                                 <svg width="20px" height="20px">
                                     <use href="./images/symboldefs.svg#linkedin"></use>
                                 </svg>
