--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                         <li class="filter-list-item"><button class="list-item-button">Маркетинг</button></li>
                     </ul>
                     <ul class="project-list">
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -71,7 +71,7 @@
                                 <p class="description-p">Веб-сайт</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -81,7 +81,7 @@
                                 <p class="description-p">Дизайн</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -91,7 +91,7 @@
                                 <p class="description-p">Додаток</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -101,7 +101,7 @@
                                 <p class="description-p">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -111,7 +111,7 @@
                                 <p class="description-p">Додаток</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -121,7 +121,7 @@
                                 <p class="description-p">Веб-сайт</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -131,7 +131,7 @@
                                 <p class="description-p">Дизайн</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
@@ -141,7 +141,7 @@
                                 <p class="description-p">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="project-listitem box">
+                        <li class="project-list__item box">
                             <div class="overlay"> 
                                 <p class="taxt">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
