--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 <nav class="nav">
                     <a class="link-header" href="./index.html" target="_self">Web<span class="logo">Studio</span></a>
                     <ul class="list-header">
-                        <li class="list__item-header">
+                        <li class="list-header__item">
                             <a href="./index.html" target="_self" class="link-list-item-header active">Студія</a>
                         </li>
-                        <li class="list__item-header">
+                        <li class="list-header__item">
                             <a href="./portfolio.html" target="_self"class="link-list-item-header">Портфоліо</a>
                         </li>
-                        <li class="list__item-header">
+                        <li class="list-header__item">
                             <a href="./" target="_self" class="link-list-item-header">Контакти</a>
                         </li>
                     </ul>
                 </nav>
                 <ul class="list-header">
-                    <li class="list__item-header">
+                    <li class="list-header__item">
                         <a href="mailto:info@devstudio.com" class="link-list-item">
                             <svg width="16px" height="12px">
                                 <use href="./images/symboldefs.svg#gmail"></use>
@@ -42,7 +42,7 @@
                             info@devstudio.com
                         </a>
                     </li>
-                    <li class="list__item-header">
+                    <li class="list-header__item">
                         <a href="tel:+380961111111" class="link-list-item">
                             <svg width="10px" height="16px">
                                 <use href="./images/symboldefs.svg#phone"></use>
