--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 <div class="conteiner">
                     <h1 class="filter-title">Проєкти WebStudio</h1>
                     <ul class="filter-list">
-                        <li class="filter-list-item"><button class="list-item-button" id="active">Усі</button></li>
+                        <li class="filter-list-item"><button class="list-item-button active-but">Усі</button></li>
                         <li class="filter-list-item"><button class="list-item-button">Веб-сайти</button></li>
                         <li class="filter-list-item"><button class="list-item-button">Додатки</button></li>
                         <li class="filter-list-item"><button class="list-item-button">Дизайн</button></li>
