--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                 </nav>
-                <ul class="list-header">
+                <ul class="list-header doble">
                     <li class="list-header__item">
                         <a href="mailto:info@devstudio.com" class="link-list-item">
                             <svg width="16px" height="12px">
@@ -51,6 +51,9 @@
                         </a>
                     </li>
                 </ul>
+                <div class="div-mobile">
+                    <a href="./menu.html" class="open-menu"></a>
+                </div>
             </div>
         </header>
         <main class="main">
