--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <link rel="stylesheet" href="./css/main.min.css">
     <link rel="icon" href="./images/login.png" type="image/x-icon">
 </head>
-<body class="body">
+<body class="body-menu">
     <div class="main-conteiner">
         <header class="header">
             <div class="conteiner header-div">
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                 </nav>
-                <ul class="list-header doble">
+                <ul class="list-header">
                     <li class="list-header__item">
                         <a href="mailto:info@devstudio.com" class="link-list-item">
                             <svg width="16px" height="12px">
@@ -51,9 +51,6 @@
                         </a>
                     </li>
                 </ul>
-                <div class="div-mobile">
-                    <a href="./menu.html" class="open-menu"></a>
-                </div>
             </div>
         </header>
         <main class="main">
