--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,9 @@
                         </a>
                     </li>
                 </ul>
+                <div class="div-mobile">
+                    <a href="./menu.html" class="open-menu"></a>
+                </div>
             </div>
         </header>
         <main>
