--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body class="body">
@@ -32,7 +32,7 @@
                             <a href="./index.html" target="_self" class="link-list-item-header active">Студія</a>
                         </li>
                         <li class="list-header__item">
-                            <a href="./portfolio.html" target="_self"class="link-list-item-header">Портфоліо</a>
+                            <a href="./portfolio.html" target="_self" class="link-list-item-header">Портфоліо</a>
                         </li>
                         <li class="list-header__item">
                             <a href="./" target="_self" class="link-list-item-header">Контакти</a>
@@ -336,7 +336,7 @@
                                 >
                                 <source 
                                     srcset="./images/mihailo-m-1x.png   1x,
-                                            ./images/mihailo-m-2x.png    2x" 
+                                            ./images/olha-m-2x.png    4x" 
                                     media="(min-width: 320px)"
                                 >
                                 <img src="./images/mihailo-m-1x.png" alt="Ігор Димьяненко">
